--- a/final_2.0/process/css/_base.css
+++ b/final_2.0/process/css/_base.css
@@ -68,6 +68,7 @@ h2 {
     border-radius: 3px;
     text-align: center;
 }
+
 .box-cover-overlay {
     top: 0;
     left: 0;
@@ -80,24 +81,24 @@ h2 {
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     cursor: pointer;
-    .play-button {
-        color: white;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        font-size: 4em;
-        z-index: 10;
-        text-align: center;
-        opacity: 0;
-        text-shadow: 0px 0px 9px #000;
-        transition: all 0.3s;
-        -webkit-transition: all 0.3s;
-    }
 }
-.box-cover-overlay:hover,
-.play-button:hover {
+.play-button {
+    color: white;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    font-size: 4.0em;
+    z-index: 9;
+    text-align: center;
+    opacity: 0;
+    text-shadow: 0px 0px 9px #000;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+}
+#historyCarousel .box-cover-overlay:hover + .play-button,
+#newArrivalsCarousel .box-cover-overlay:hover + .play-button {
     opacity: 1;
 }
 /*bootstrap*/
@@ -159,6 +160,16 @@ h2 {
         font-family: $headerFont;
         font-size: $mHeaderSize2;
         margin: 0 0 0 .5em;
+    }
+}
+/*---popover--*/
+.popover {
+    width: 150%;
+    .popover-title {
+        color: #000;
+    }
+    .popover-content {
+        color: #000;
     }
 }
 
